# moxaic

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
shaders/: basic_comp.frag  basic_comp.vert  basic_comp_vert.h  basic_comp_vert.json  basic_material.frag  basic_material.vert  basic_material_crasher.frag  binding_basic_material.glsl  binding_line_material.glsl  binding_material.glsl  binding_node.glsl  binding_object.glsl  common_util.glsl  compositor_final_blit.comp  compositor_gbuffer_blit_mip_step.comp  compositor_gbuffer_blit_up.comp  compositor_gbuffer_process_convert.comp  compositor_gbuffer_process_down.comp  compositor_gbuffer_process_subgroup.comp  compositor_gbuffer_process_up.comp  compute_comp.comp  compute_comp_post.comp  compute_comp_pre.comp  compute_compositor.comp  compute_compositor_binding.glsl  compute_node.comp  compute_node_binding.glsl  compute_node_clear.comp  compute_node_post.comp  compute_node_pre.comp  compute_post_compositor.comp  compute_post_compositor_basic.comp  depth_reproject.glsl  gbuffer_process_binding.glsl  global_binding.glsl  line.frag  line.vert  logging.glsl  math.glsl  mesh_comp.frag  (+28 more)
src/: .clang-format  .clang-tidy  comp_node.c  comp_node.h  compositor.c  compositor.h  constants.h  globals.h  main.c  main.cpp  main.hpp  mid_bit.h  mid_block.h  mid_channel.h  mid_common.h  mid_dx12.h  mid_implementation.c  mid_math.h  mid_openxr_runtime.h  mid_oxr.h  mid_qring.h  mid_shape.h  mid_vulkan.c  mid_vulkan.h  mid_window.h  moxaic_camera.cpp  moxaic_camera.hpp  moxaic_core.cpp  moxaic_core.hpp  moxaic_interprocess.cpp  moxaic_interprocess.hpp  moxaic_logging.cpp  moxaic_logging.hpp  moxaic_node.cpp  moxaic_node.hpp  moxaic_renderer.cpp  moxaic_renderer.hpp  moxaic_scene.cpp  moxaic_scene.hpp  moxaic_transform.cpp  (+41 more)
src/descriptors/: moxaic_compute_composite_descriptor.hpp  moxaic_compute_node_descriptor.hpp  moxaic_global_descriptor.hpp  moxaic_material_descriptor.hpp  moxaic_mesh_node_descriptor.hpp  moxaic_node_process_descriptor.hpp  moxaic_object_descriptor.hpp  moxaic_vulkan_descriptor.cpp  moxaic_vulkan_descriptor.hpp
src/mid/: .clang-format  mid_vulkan.cpp  mid_vulkan.hpp
src/pipelines/: moxaic_compute_composite_pipeline.hpp  moxaic_compute_node_pipeline.hpp  moxaic_mesh_node_pipeline.hpp  moxaic_node_process.hpp  moxaic_node_process_pipeline.hpp  moxaic_standard_pipeline.hpp  moxaic_vulkan_pipeline.hpp
src/utilities/: .clang-format  BitFlags.hpp  bit_flags.hpp  static_array.hpp  vulkan_medium.h  vulkan_medium.hpp  vulkan_mid.hpp
